--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <title>Designco</title>
-    <link rel="stylesheet" href="/screen.css">
+    <link rel="stylesheet" href="screen.css">
+    <style>
+.redtext {
+        color: red;
+}
+    </style>
   </head>
+
   <body>
-    <h1>Hello, World!</h1>
+      <div class="header">
+        <div class="headerContent">
+            <a href="#">
+                <img src="C:/Users/Nikole McStanley/tiy/week-1/day-2/designco-logo.png" alt="designco"  height="15" />
+            </a>
+            <div class="nav">  
+               <ul>
+                   <li><a href="#">Home</a></li>
+                   <li><a href="#">Portfolio</a></li>
+                   <li><a href="#">About</a></li>
+                   <li><a href="#">Contact</a></li>
+              </ul>
+            </div>
+         </div>
+      </div>
+
+    <h1>The Details Matter</h1>
+    <p>We're making beautiful website layouts using modern methods</p>
+    <img src="C:/Users/Nikole McStanley/tiy/week-1/day-2/__MACOSX/clark-street-mercantile-33931.jpg" alt="designco"  height="365" />
+    <img src="C:/Users/Nikole McStanley/tiy/week-1/day-2/__MACOSX/matthew-henry-58761.jpg" alt="designco"  height="365" />
+
+    <h5 class= "redtext"> What's New </h5>
+    <p> We always have new projects that client's hire us for. </p>
+    <h5> Modern Layouts </h5>
+    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
   </body>
 </html>
