"Hello, App App!"

--- a/public/index.html
+++ b/public/index.html
@@ -5,38 +5,36 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <title>Designco</title>
     <link rel="stylesheet" href="screen.css">
-    <style>
-.redtext {
-        color: red;
-}
-    </style>
-  </head>
+   </head>
 
   <body>
-      <div class="header">
-        <div class="headerContent">
-            <a href="#">
-                <img src="C:/Users/Nikole McStanley/tiy/week-1/day-2/designco-logo.png" alt="designco"  height="15" />
-            </a>
-            <div class="nav">  
-               <ul>
+    <header>   
+        <div class="headerContent"> 
+          <img src="C:/Users/Nikole McStanley/tiy/week-1/day-2/designco-logo.png" alt="designco" style="width:120px;height:20px;">                   
+               <ul>                   
                    <li><a href="#">Home</a></li>
                    <li><a href="#">Portfolio</a></li>
                    <li><a href="#">About</a></li>
                    <li><a href="#">Contact</a></li>
               </ul>
-            </div>
+            <img src="C:/Users/Nikole McStanley/tiy/week-1/day-2/icon-search.png" alt="iconsearch" style="width:20px;height:20px;">
+    </header>      
          </div>
-      </div>
-
-    <h1>The Details Matter</h1>
-    <p>We're making beautiful website layouts using modern methods</p>
-    <img src="C:/Users/Nikole McStanley/tiy/week-1/day-2/__MACOSX/clark-street-mercantile-33931.jpg" alt="designco"  height="365" />
-    <img src="C:/Users/Nikole McStanley/tiy/week-1/day-2/__MACOSX/matthew-henry-58761.jpg" alt="designco"  height="365" />
-
-    <h5 class= "redtext"> What's New </h5>
-    <p> We always have new projects that client's hire us for. </p>
-    <h5> Modern Layouts </h5>
-    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+    
+         <div class="Title">
+            <h1 class= "titleText">The Details Matter</h1>
+            <h4>We're making beautiful website </h4>
+            <h4>layouts using modern methods</h4>
+        </div>
+    <div class="Images">
+        <div><img src="C:/Users/Nikole McStanley/tiy/week-1/day-2/__MACOSX/clark-street-mercantile-33932.jpg" alt="designco"  height="365" /></div>
+        <div><img src="C:/Users/Nikole McStanley/tiy/week-1/day-2/__MACOSX/matthew-henry-58761.jpg" alt="designco"  height="365" /></div>
+    </div>
+        <div class="column">
+          <div><h5 class= "redtext"> What's New </h5><p> We always have new projects that client's hire us for. </p><p> View recent projects </p></div>
+          <div><h5 class= "subtext"> Modern Layouts </h5><p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p></div>
+          <div><p> exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu </p></div>
+          <div><p>fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><div>
+        </div>
   </body>
 </html>
