--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
   <body>
     <header>   
         <div class="headerContent"> 
-          <img src="C:/Users/Nikole McStanley/tiy/week-1/day-2/designco-logo.png" alt="designco" style="width:120px;height:20px;">                   
+          <img src="designco-logo.png" alt="designco" style="width:120px;height:20px;">                   
                <ul>                   
                    <li><a href="#">Home</a></li>
                    <li><a href="#">Portfolio</a></li>
                    <li><a href="#">About</a></li>
                    <li><a href="#">Contact</a></li>
               </ul>
-            <img src="C:/Users/Nikole McStanley/tiy/week-1/day-2/icon-search.png" alt="iconsearch" style="width:20px;height:20px;">
+            <img src="icon-search.png" alt="iconsearch" style="width:20px;height:20px;">
     </header>      
          </div>
     
@@ -27,8 +27,8 @@
             <h4>layouts using modern methods</h4>
         </div>
     <div class="Images">
-        <div><img src="C:/Users/Nikole McStanley/tiy/week-1/day-2/__MACOSX/clark-street-mercantile-33932.jpg" alt="designco"  height="365" /></div>
-        <div><img src="C:/Users/Nikole McStanley/tiy/week-1/day-2/__MACOSX/matthew-henry-58761.jpg" alt="designco"  height="365" /></div>
+        <div><img src="clark-street-mercantile-33932.jpg" alt="designco"  height="365" /></div>
+        <div><img src="matthew-henry-58761.jpg" alt="designco"  height="365" /></div>
     </div>
         <div class="column">
           <div><h5 class= "redtext"> What's New </h5><p> We always have new projects that client's hire us for. </p><p> View recent projects </p></div>
